sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value j
        if (!plusPetit(j,j+1)) {
                       ^AlgCocktailSort1:11: error: not found: value j
        if (!plusPetit(j,j+1)) {
                         ^AlgCocktailSort1:12: error: not found: value j
    	echange(j,j+1)
                ^AlgCocktailSort1:12: error: not found: value j
    	echange(j,j+1)
                  ^AlgCocktailSort1:16: error: not found: value j
        if (!plusPetit(j,j+1)) {
                       ^AlgCocktailSort1:16: error: not found: value j
        if (!plusPetit(j,j+1)) {
                         ^AlgCocktailSort1:17: error: not found: value j
    	echange(j,j+1)
                ^AlgCocktailSort1:17: error: not found: value j
    	echange(j,j+1)
                  ^