sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() 
  {
  
  val n = getNombreValeurs()
var swapped=false

    do {
      swapped=false
      for (i<-0 to n-2) {
        if (!plusPetit(j,j+1)) {
    	echange(j,j+1)
    	swapped=true
        }}
      for (i<-n-2 to 0 by -1) {
        if (!plusPetit(j,j+1)) {
    	echange(j,j+1)
    	swapped=true
        }}
      
      }
    while(swapped)
    }
    
    
